--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha-mongoose": "^1.0.3",
     "mongodb": "^1.4.33",
     "mongoose": "^4.0.7",
+    "nodemailer": "^1.8.0",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
@@ -58,6 +59,7 @@
     "sinon": "^1.13.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
-    "supertest": "^0.15.0"
+    "supertest": "^0.15.0",
+    "swig": "^1.4.2"
   }
 }
