--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel": "^5.0.12",
     "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
-    "bootstrap": "^3.3.4",
+    "bootstrap": "^3.3.5",
+    "bootstrap-social": "^4.9.1",
+    "bootstrap-sweetalert": "^0.4.2",
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
     "chance": "^0.8.0",
@@ -24,6 +26,7 @@
     "cookie-parser": "^1.3.4",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
+    "font-awesome": "^4.4.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
@@ -58,6 +61,7 @@
     "run-sequence": "^1.0.2",
     "serve-favicon": "^2.2.0",
     "sinon": "^1.13.0",
+    "social": "^0.4.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
     "stripe": "^4.0.0",
